2st commit: Worked on toolbar and backbutton.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,13 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    <style name="Theme.PinPlaces" parent="Base.Theme.PinPlaces" />
+    <style name="CustomNoActionBarTheme" parent = "@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor" >@color/teal_200</item>
+    </style>
+
+    <style name="CustomToolBarStyle">
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="colorControlNormal">#FFFFFF</item>
+    </style>
 </resources>
