--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -9,11 +9,13 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:background="@color/teal_200"
         android:id="@+id/toolbar_pin_place"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:theme="@style/Theme.AppCompat.DayNight"
+        android:theme="@style/CustomToolBarStyle"
+
 
     />
 </androidx.constraintlayout.widget.ConstraintLayout>
