--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -35,6 +35,7 @@
             android:padding="@dimen/main_content_padding">
 
             <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginTop="20dp"
                 android:id="@+id/til_title"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -44,6 +45,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.appcompat.widget.AppCompatEditText
+
                     android:id="@+id/et_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -51,10 +53,12 @@
                     android:inputType="textCapWords"
                     android:textColor="@color/black"
                     android:textColorHint="@color/lightGrey"
-                    android:textSize="@dimen/edit_text_text_size" />
+                    android:textSize="@dimen/edit_text_text_size"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+
                 android:id="@+id/til_description"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -72,7 +76,8 @@
                     android:inputType="textCapSentences"
                     android:textColor="@color/black"
                     android:textColorHint="@color/lightGrey"
-                    android:textSize="@dimen/edit_text_text_size"/>
+                    android:textSize="@dimen/edit_text_text_size"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -91,9 +96,12 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/edit_text_hint_date"
                     android:inputType="text"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:textColor="@color/black"
                     android:textColorHint="@color/lightGrey"
-                    android:textSize="@dimen/edit_text_text_size" />
+                    android:textSize="@dimen/edit_text_text_size"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -114,7 +122,8 @@
                     android:inputType="text"
                     android:textColor="@color/black"
                     android:textColorHint="@color/lightGrey"
-                    android:textSize="@dimen/edit_text_text_size" />
+                    android:textSize="@dimen/edit_text_text_size"
+                    tools:ignore="TouchTargetSizeCheck" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.AppCompatImageView
