--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PinPlaces" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.PinPlaces" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/teal_200</item>
     </style>
     <style name="Theme.PinPlaces" parent="Base.Theme.PinPlaces" />
-    <style name="CustomNoActionBarTheme" parent = "@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="CustomNoActionBarTheme" parent = "@style/Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor" >@color/teal_200</item>
     </style>
 
