--- a/app/src/main/res/layout/item_pin_place.xml
+++ b/app/src/main/res/layout/item_pin_place.xml
@@ -12,7 +12,8 @@
         android:layout_marginEnd="8dp"
         android:background="@color/teal_200"
         android:backgroundTint="@color/teal_200"
-        app:cardCornerRadius="3dp"
+        app:cardCornerRadius="40dp"
+        app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
